@@ -1,3 +1,10 @@
+2005-08-22  Yves Combe,,,  <yves@ycombe.net>
+
+	add en entry in login, to enter typing the login. Configurable by profile.
+
+	* src/boards/python/admin/board_list.py:
+	* src/boards/python/login.py:
+
 2005-08-22  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	G~ran Uddeborg <goeran@uddeborg.se> added voices for continents
